--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "types": "types",
   "author": "Redmer Kronemeijer <redmer.kronemeijer@crow.nl>",
   "license": "MPL-2.0",
-  "private": true,
+  "private": false,
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
