--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-prettier": "^3.4.0",
+    "form-data": "^4.0.0",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
     "lint-staged": "^11.0.1",
     "prettier": "^2.3.2",
+    "ts-essentials": "^7.0.2",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.5"
   },
@@ -42,6 +44,7 @@
   "scripts": {
     "test": "jest",
     "build": "tsc",
+    "start": "yarn build && node ./dist/index.js",
     "dev:prepare": "husky install",
     "lint": "cross-env ESLINT_STRICT=true ESLINT_EXPENSIVE=true eslint --ext .tsx --ext .ts ./src",
     "format": "yarn format:ts",
