--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "esModuleInterop": true,
 
     "removeComments": true,
-    "outDir": "./dist",
+    "outDir": "./lib",
     "rootDir": "./src",
     "sourceMap": true,
     "resolveJsonModule": true,
@@ -30,7 +30,7 @@
 
     // declarations
     "declaration": true,
-    "declarationDir": "./types"
+    "declarationDir": "./lib/types"
   },
   "compileOnSave": true,
   "include": ["src/**/*.ts"],
