--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
     "jest": "^27.0.6",
     "lint-staged": "^11.0.1",
     "prettier": "^2.3.2",
-    "ts-essentials": "^7.0.2",
     "ts-jest": "^27.0.3",
     "typedoc": "^0.21.4",
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "ts-essentials": "^7.0.2"
   },
   "scripts": {
     "test": "jest",
