fix: Publication by path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "commonjs",
     "esModuleInterop": true,
 
-    "removeComments": true,
+    "removeComments": false,
     "outDir": "./lib",
     "rootDir": "./src",
     "sourceMap": true,
