--- a/.github/workflows/gh-pkg-publish.yaml
+++ b/.github/workflows/gh-pkg-publish.yaml
@@ -10,10 +10,10 @@ jobs:
       # Setup .npmrc file to publish to npm
       - uses: actions/setup-node@v2
         with:
-          node-version: '14.x'
-          registry-url: 'https://npm.pkg.github.com'
+          node-version: "14.x"
+          registry-url: "https://npm.pkg.github.com"
           # Defaults to the user or organization that owns the workflow file
-          scope: '@stichting-crow'
+          scope: "@stichting-crow"
       - run: yarn
       - run: yarn publish --access restricted
         env:
