--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "esModuleInterop": true,
 
     "removeComments": false,
-    "outDir": "./lib",
+    "outDir": "./dist",
     "rootDir": "./src",
     "sourceMap": true,
     "resolveJsonModule": true,
