--- a/.github/workflows/gh-pkg-publish.yaml
+++ b/.github/workflows/gh-pkg-publish.yaml
@@ -1,20 +1,32 @@
-name: Node.js Package
+name: Release NodeJS package
+
 on:
-  release:
-    types: [created]
+  push:
+    tags:
+      - "v*.*.*"
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      # Setup .npmrc file to publish to npm
-      - uses: actions/setup-node@v2
+      - name: Checkout
+        uses: actions/checkout@master
+
+      - name: Setup NodeJS 14
+        uses: actions/setup-node@v2
         with:
           node-version: "14.x"
           registry-url: "https://npm.pkg.github.com"
           # Defaults to the user or organization that owns the workflow file
           scope: "@stichting-crow"
+
+      - name: Make release
+        uses: softprops/action-gh-release@v1
+        with:
+          generate_release_notes: true
+
       - run: yarn
-      - run: yarn publish --access restricted
+
+      - run: yarn publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
