--- a/.github/workflows/gh-pkg-publish.yaml
+++ b/.github/workflows/gh-pkg-publish.yaml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "14.x"
-          registry-url: "https://npm.pkg.github.com"
+          registry-url: "https://registry.npmjs.org/"
           # Defaults to the user or organization that owns the workflow file
           scope: "@stichting-crow"
 
@@ -27,6 +27,6 @@ jobs:
 
       - run: yarn
 
-      - run: yarn publish
+      - run: yarn publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
